Fixed responsivness on iphones

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ input[type=number] {
 }
 
 @media (min-width: 768px) {
-	.container {
-		width: 970px;
+	.nav-container {
+		width: 900px;
 	}
 }
